# fullstack-manip

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: CODEBASE_SUMMARY.md
configs/: dynamic_plant.yaml  minimal.yaml  pickplace.yaml  rates.yaml
docs/: 01-project-goals.md  02-hardware-requirements.md  02-requirements.md  03-literature-survey.md  04-architecture.md  05-hardware-stack.md  06-state-estimation.md  07-simulation.md  08-low-level-control.md  09-model-based-stack.md  10-learning-based-stack.md  11-evaluation.md  12-documentation.md  DOCUMENTATION_INDEX.md  PROJECT_HANDOFF.md  behavior-tree-complete-guide.md  configuration-system.md  core-structure-visual.md  gripper.md  modular-architecture-readme.md  visualization-system.md
docs/diagrams/: component_architecture
examples/: picknplace_soarm100.py  pickplace_with_new_architecture.py  teleop_soarm100.py
fullstack_manip/: __init__.py
fullstack_manip/control/: __init__.py  motion_executor.py
fullstack_manip/control/high_level/: __init__.py  admittance_controller.py  base_controller.py  force_control_controller.py  gravity_compensation_controller.py  impedance_controller.py  pick_place_controller.py  robot.py  trajectory_following_controller.py  visual_servo_controller.py
fullstack_manip/control/low_level/: __init__.py  pid_controller.py
fullstack_manip/core/: __init__.py  collision.py  config.py  gripper.py  ik.py  interfaces.py  limit.py  manip_plant.py  objects.py  robot.py  state.py  visualization.py
fullstack_manip/execution/: README.md  __init__.py
fullstack_manip/execution/behaviors/: __init__.py  control_behaviors.py  gripper_behaviors.py  motion_behaviors.py  perception_behaviors.py  safety_behaviors.py
fullstack_manip/execution/blackboard/: __init__.py
fullstack_manip/execution/skills/: __init__.py  pick_skill.py
fullstack_manip/planning/: __init__.py  motion_planner.py
fullstack_manip/scripts/: assets.py  loader.py  motion_planner.py  pick_place_controller.py  picknplace_soarm100.py  pid_controller.py  robot.py  scene.py  sim_mujoco.py  teleop_soarm100.py  viewer.py
fullstack_manip/scripts/trs_so_arm100/: box.xml  scene_with_cube.xml  scene_with_table.xml  scene_without_position.xml  so_arm100.xml  so_arm100_without_position.xml
fullstack_manip/simulation/: __init__.py  asset_manager.py  loader.py  scene.py  viewer.py
fullstack_manip/simulation/assets/: __init__.py
fullstack_manip/simulation/assets/trs_so_arm100/: box.xml  scene_with_table.xml  so_arm100.xml
fullstack_manip/simulation/assets/ur5e/xmls/: ur5e_robotiq2f85.xml
fullstack_manip/state_estimation/: __init__.py
fullstack_manip/state_estimation/camera/: __init__.py
fullstack_manip/state_estimation/camera/calibration/: __init__.py
fullstack_manip/state_estimation/camera/calibration/scripts/: __init__.py  _shared.py
fullstack_manip/state_estimation/camera/calibration/tests/: test_camera_window.py  test_shared_helpers.py
fullstack_manip/state_estimation/camera/calibration/tools/: camera_calibration_tool.py  detection_monitor.py  generate_aruco_markers.py  webcam_parameter_estimator.py
fullstack_manip/utils/: loop_rate_limiters.py  rate_config.py
scripts/: config_system_demo.py  generate_architecture_diagrams.py  manipulation_plant_demo.py  picknplace_soarm100.py  pickplace_migration.py  sim_mujoco.py  verify_behavior_trees.py  visualization_demo.py
tests/: test_rate_config.py
